<resources>

    <string name="app_name">Connecti</string>
    <string name="chat_app">Welcome to chat app</string>
    <string name="chat_login">Already have an account</string>
    <string name="chat_register">Need an account</string>
    <string name="Name">Name</string>
    <string name="Mobileno">Mobile Number</string>
    <string name="Email">Email</string>
    <string name="UserName">User Name</string>
    <string name="password">Password</string>
    <string name="confirmpasswrd">Confirm password</string>
    <string name="signbtn">Sign Up</string>
    <string name="nect_activity">Next</string>
    <string name="signin">signin</string>
    <string name="google">G-sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_begin">BeginActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
